--- a/styles.less
+++ b/styles.less
@@ -17,102 +17,89 @@ button {
 }
 
 header {
-    display        : flex;
-    justify-content: center;
-}
+    width: 100%;
 
-.container {
-    margin-top           : 18px;
-    width                : 100%;
-    height               : 80px;
-    display              : grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    align-items          : center;
-    justify-content      : center;
+    .container {
+        margin-top           : 18px;
+        width                : 100%;
+        height               : 80px;
+        display              : grid;
+        grid-template-columns: 1fr 4fr 1fr;
+        align-items          : center;
+        justify-content      : center;
 
+        .container--menu .container--menu--responsive {
+            display: none;
+        }
 
-    .container--menu .container--menu--responsive {
-        display: none;
-    }
+        .container--logo {
+            width: fit-content;
 
-    .container--logo img {
-        height       : 32px;
-        margin-top   : 26.5px;
-        margin-bottom: 26.5px;
-        margin-left  : 112px;
-        margin-right : 119px;
-    }
-
-    .container--menu {
-        width         : 80%;
-        height        : 32px;
-        display       : flex;
-        flex-direction: row;
-        align-items   : center;
-
-
-        ul {
-            list-style     : none;
-            display        : flex;
-            justify-content: space-around;
-            align-items    : center;
-
-
-
-            li {
-                width : 100px;
-                margin: 0 5px;
-
-
-                a {
-                    text-decoration: none;
-                    color          : var(--light-grey);
-                    font-size      : 16px;
-                    line-height    : 24px;
-                }
+            img {
+                height       : 32px;
+                margin-top   : 26.5px;
+                margin-bottom: 26.5px;
+                margin-left  : 112px;
+                margin-right : 119px;
             }
         }
 
-    }
+        .container--menu {
+            width          : 80%;
+            height         : 32px;
+            display        : flex;
+            justify-content: space-between;
+            flex-direction : row;
+            align-items    : center;
 
-    .container--buttom {
-        width       : 10%;
-        display     : flex;
-        align-items : center;
-        margin-right: 112px;
+            ul {
+                list-style     : none;
+                display        : flex;
+                justify-content: space-around;
+                align-items    : center;
 
+                li {
+                    width : fit-content;
+                    margin: 0 5px;
 
-        button {
-            font-weight: 500;
-            font-size  : 16px;
-            line-height: 24px;
-            color      : var(--light-grey);
+                    a {
+                        text-decoration: none;
+                        color          : var(--light-grey);
+                        font-size      : 16px;
+                        line-height    : 24px;
+                    }
+                }
+            }
 
+            .container--buttom {
+                width      : 10%;
+                display    : flex;
+                align-items: center;
+
+                button.buttom--entrar {
+                    background : blue;
+                    width      : 47px;
+                    height     : 24px;
+                    border     : none;
+                    font-family: 'Inter';
+                    font-style : normal;
+                    color      : var(--light-grey);
+                    background : none;
+                }
+
+                button.buttom--cadastrar {
+                    padding      : 5px 20px;
+                    background   : var(--dark-red);
+                    border       : 1px solid var(--dark-red);
+                    box-sizing   : border-box;
+                    box-shadow   : 0px 2px 2px rgba(16, 24, 40, 0.05);
+                    border-radius: 8px;
+                    color        : #fff;
+                    margin-left  : 30px;
+
+                }
+            }
         }
-
-        .buttom--entrar {
-            background : blue;
-            width      : 47px;
-            height     : 24px;
-            border     : none;
-            font-family: 'Inter';
-            font-style : normal;
-            color      : var(--light-grey);
-            background : none;
-        }
-
-        .buttom--cadastrar {
-            padding      : 5px 20px;
-            background   : var(--dark-red);
-            border       : 1px solid var(--dark-red);
-            box-sizing   : border-box;
-            box-shadow   : 0px 2px 2px rgba(16, 24, 40, 0.05);
-            border-radius: 8px;
-            color        : #fff;
-            margin-left  : 30px;
-
-        }
-
     }
 }
 
@@ -126,8 +113,6 @@ header {
     display        : flex;
     justify-content: center;
     align-items    : center;
-    border         : 1px solid red;
-
 
     .container--content--header {
         display        : flex;
@@ -173,16 +158,13 @@ header {
     width          : 80%;
     height         : 407px;
     top            : 80px;
-    display: flex;
+    display        : flex;
     justify-content: space-around;
-    margin: 0 auto;
-    border         : 1px solid red;
+    margin         : 0 auto;
 
-        .container--item {
+    .container--item {
         width : 280px;
-        border: 1px solid blue;
         margin: 0 16px;
-
 
         h3 {
             color      : var(--dark-red);
@@ -193,35 +175,26 @@ header {
         }
 
         h2 {
-            font-weight: 600;
-            font-size  : 18px;
-            line-height: 28px;
+            font-weight  : 600;
+            font-size    : 18px;
+            line-height  : 28px;
             margin-bottom: 8px;
-            color: #101828;
+            color        : #101828;
         }
 
         p {
             font-weight: 400;
             font-size  : 16px;
             line-height: 24px;
-            color: var(--light-grey);
+            color      : var(--light-grey);
         }
-
     }
-
-
-
 }
-
-
-
-
 
 @media (max-width: 795px) {
     .container {
         width: 795px
     }
-
 
     .container .container--menu .container--menu--responsive {
         display: block;
