--- a/styles.less
+++ b/styles.less
@@ -26,6 +26,7 @@
 
 .active {
     opacity: 1 !important;
+
 }
 
 body,
@@ -70,7 +71,6 @@ header {
             flex-direction : row;
             align-items    : center;
 
-
             .container--menu--responsive {
                 opacity: 0;
 
@@ -92,15 +92,17 @@ header {
                 margin-right   : auto;
 
                 @media (max-width: 1004px) {
-                    display       : block;
-                    flex-direction: column;
-                    position: absolute;
+                    display        : block;
+                    flex-direction : column;
+                    position       : absolute;
                     justify-content: center;
-                    right: 20px;
-                    opacity: 0;
-                
+                    right          : 20px;
+                    opacity        : 0;
+                    transition     : all 0.7s;
+                    width          : 150px;
+                    //background: #fff;
                 }
-                
+
                 ul {
                     list-style     : none;
                     display        : flex;
@@ -108,18 +110,23 @@ header {
                     align-items    : center;
 
                     @media (max-width: 1004px) {
-                        display       : block;
-                        flex-direction: column;
-                        position: absolute;
+                        display        : block;
+                        flex-direction : column;
+                        position       : absolute;
                         justify-content: center;
-                        top: 10px;
-                        right: 19px;
-                        margin-bottom: 10px;
+                        top            : 10px;
+                        right          : 19px;
+                        width          : 100%;
+                        background     : #fff;
                     }
 
                     li {
                         width : fit-content;
                         margin: 0 15px;
+
+                        @media (max-width: 1004px) {
+                            margin: 0 auto 10px 10px;
+                        }
 
                         a {
                             text-decoration: none;
@@ -139,16 +146,17 @@ header {
 
 
                     @media (max-width: 1004px) {
-                        display       : block;
-                        flex-direction: column;
-                        position: absolute;
-                        text-align: center;
+                        display        : block;
+                        flex-direction : column;
+                        position       : absolute;
                         justify-content: center;
-                        align-items: center;
-                        top: 150px;
-                        right: 10px;
+                        align-items    : center;
+                        top            : 160px;
+                        right          : 10px;
+                        width          : 100%;
+                        background     : #fff;
                     }
-                    
+
 
                     button.buttom--entrar {
                         width      : 47px;
@@ -171,6 +179,12 @@ header {
                         margin-left  : 30px;
                         font-size    : 16px;
                         font-weight  : 400;
+
+                        @media (max-width: 1004px) {
+                            width      : 100%;
+                            margin-left: 0;
+                            margin-top : 10px;
+                        }
                     }
                 }
             }
@@ -186,10 +200,14 @@ header {
     top        : 80px;
     margin     : 0 auto;
 
+    @media (max-width: 1004px) {
+        height    : 100%;
+        text-align: center;
+    }
+
     .container--content--header {
         .d-flex-jc-ac();
         flex-direction: column;
-
 
         h5 {
             color      : var(--dark-red);
@@ -215,6 +233,12 @@ header {
             padding-bottom: 96px;
             line-height   : 30px;
             text-align    : center;
+
+            @media (max-width: 1004px) {
+                padding-bottom: 40px;
+                width         : 100%;
+                font-size     : 0.8em;
+            }
         }
     }
 }
@@ -227,9 +251,20 @@ header {
     justify-content: space-around;
     margin         : 0 auto;
 
+    @media (max-width: 1004px) {
+        display       : flex;
+        flex-direction: column;
+        height        : 100%;
+        text-align    : left;
+    }
+
     .container--item {
         width : 280px;
         margin: 0 16px;
+
+        @media (max-width: 1004px) {
+            margin: 0;
+        }
 
         h3 {
             color      : var(--dark-red);
@@ -261,6 +296,7 @@ header {
 
     .container--item.mr--0 {
         margin-right: 0;
+
     }
 }
 
@@ -268,6 +304,11 @@ header {
     width : 80%;
     height: 1798px;
     margin: 0 auto;
+
+    @media (max-width: 1004px) {
+        height    : 100%;
+        margin-top: 40px;
+    }
 
     .talents {
         .d-flex-jc-ac();
@@ -307,10 +348,15 @@ header {
     }
 
     .jobs--open {
-
+        
         .container {
             margin: 96px 80px 0 80px;
             width : 80%;
+
+            @media (max-width: 1004px) {
+                width: 100%;
+                margin-left: 0;
+            }
 
             .content {
                 h3 {
@@ -359,6 +405,7 @@ header {
 
 #testemonial {
     padding: 92px 0;
+    width  : 100%;
 
     .container {
         width : 80%;
@@ -460,6 +507,10 @@ footer {
                     width        : 360px;
                     height       : 48px;
 
+                    @media(max-width: 1004px) {
+                        width : 60%;
+                    }
+
                 }
 
                 ::placeholder {
@@ -479,6 +530,10 @@ footer {
                     color        : #fff;
                     margin-left  : 16px;
                     height       : 48px;
+
+                    @media(max-width: 1004px) {
+                        width : 40%;
+                    }
                 }
             }
         }
@@ -493,7 +548,5 @@ footer {
             color      : #98A2B3;
             margin     : 32px 0px;
         }
-
-
     }
 }
